# pipecut

./: AUTHORS  COPYING  Makefile  Makefile.am  Makefile.in  Makefile.keep.manual  NEWS  ProjectHome.md  README  config.h.in  configure  configure.ac  ipe.h  pc  pcDB.c  pcDB.h  pipecut.c  pipecut.d  pipecut.h  sendpr.d
sz-0.9.2/: ChangeLog  Makefile  Makefile.dist  Makefile.in  README  ToDo  local.vars  make.rulez  maker  sz.3  sz.c  sz.d  sz.h  sztest.c  sztr.c  version.c  version.h  version.h.in
sz-0.9.2/LICENSES/: BSD
sz-0.9.2/ports/bsdi/: make.vars
sz-0.9.2/ports/freebsd/: make.vars  shdefs
sz-0.9.2/ports/linux/: make.vars
sz-0.9.2/ports/netbsd/: make.vars
sz-0.9.2/ports/svr4/: make.vars  shdefs
sz-0.9.2/samples/: szcat.c
sz-0.9.2/test/: Makefile  t01.c  t02.c
